# application_for_analyzing_banking_transactions

./: .gitignore  README.md  pyproject.toml
src/: main.py  report_result.json  reports.py  services.py  utils.py  views.py
tests/: conftest.py  conftest_views.py  test_reports.py  test_services.py  test_views.py
